# mimic_hackathon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: policy_client_node.yaml
scripts/: install.sh
src/mimic_hackathon/inference/: policy_server.py  serialization.py
src/mimic_hackathon/preprocessing/: convert_dataset.py  convert_rosbag.py  dataset_converter.py  ros_to_np.py
